add my  comment section

--- a/index.html
+++ b/index.html
@@ -278,40 +278,43 @@
         <div class="my_skill_holder">
           <div class="my_skill_top">
             <h2>مهارت‌های من</h2>
-            <p>ما ایده‌ها و در نتیجه خواسته‌های شما را در قالب یک پروژه وب منحصر به فرد قرار می‌دهیم که الهام بخش شما و مشتریان شما است.</p>
+            <p>
+              ما ایده‌ها و در نتیجه خواسته‌های شما را در قالب یک پروژه وب منحصر
+              به فرد قرار می‌دهیم که الهام بخش شما و مشتریان شما است.
+            </p>
           </div>
           <div class="my_skill_items">
             <div class="my_skill_item">
               <div>
-                <img src="./media/image/figma.png" alt="figma">
+                <img src="./media/image/figma.png" alt="figma" />
                 <span>۹۰٪</span>
               </div>
               <p>فیگما</p>
             </div>
             <div class="my_skill_item">
               <div>
-                <img src="./media/image/js.png" alt="figma">
+                <img src="./media/image/js.png" alt="figma" />
                 <span>۸۰٪</span>
               </div>
               <p>جاوا اسکریپت</p>
             </div>
             <div class="my_skill_item">
               <div>
-                <img src="./media/image/react.png" alt="figma">
+                <img src="./media/image/react.png" alt="figma" />
                 <span>۶۰٪</span>
               </div>
               <p>ری‌اکت</p>
             </div>
             <div class="my_skill_item">
               <div>
-                <img src="./media/image/wp.png" alt="figma">
+                <img src="./media/image/wp.png" alt="figma" />
                 <span>۹۵٪</span>
               </div>
               <p>وردپرس</p>
             </div>
             <div class="my_skill_item">
               <div>
-                <img src="./media/image/php.png" alt="figma">
+                <img src="./media/image/php.png" alt="figma" />
                 <span>۹۰٪</span>
               </div>
               <p>پی اچ پی</p>
@@ -320,6 +323,12 @@
         </div>
       </section>
 
+      <section class="my_comment">
+        <div class="my_comment_holder">
+          <div class="my_comment_header"></div>
+          <div class="my_comment_slider"></div>
+        </div>
+      </section>
     </main>
   </body>
 
