--- a/index.html
+++ b/index.html
@@ -401,6 +401,24 @@
                     </div>
                   </div>
                 </div>
+
+                <div class="swiper-slide">
+                  <div class="swiper_item_holder">
+                    <img src="./media/image/testi-2.jpg" alt="" />
+                    <div class="my_comment-icon">
+                      <i class="fi fi-sr-play"></i>
+                      <i class="fi fi-sr-play"></i>
+                    </div>
+                    <p>
+                      توانمندسازی مردم در یک سفر دیجیتالی جدید با خدمات فوق
+                      العاده من
+                    </p>
+                    <div class="my_comment_info">
+                      <h4>تیم بیلی</h4>
+                      <span>متخصص سئو</span>
+                    </div>
+                  </div>
+                </div>
               </div>
 
               <div class="swiper-pagination"></div>
@@ -413,18 +431,5 @@
   <script src="./js/script.js"></script>
   <script src="./js/mobileMenu.js"></script>
   <script src="./swiper/swiper-bundle.min.js"></script>
-  <script>
-    var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 3,
-      spaceBetween: 24,
-      loop: true,
-      autoplay: {
-        delay: 10000,
-      },
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-    });
-  </script>
+  <script src="./js/slider.js"></script>
 </html>
