fixed monile menu bug and optimized mobile UI

--- a/index.html
+++ b/index.html
@@ -132,23 +132,30 @@
               <div class="hs_img">
                 <img src="./media/my personal.webp" alt="" />
               </div>
+              <div class="hs_heading_mobile">
+                <h2>من محمدرضاهستم</h2>
+                <h1>
+                  توسعه دهنده وب +
+                  طراح UI/UX
+                </h1>
+              </div>
             </div>
             <div class="hs_experience">
               <div class="he_ex_item">
                 <span class="hs_num_change" id="hsEx">۰</span
-                ><span>سال <br />تجربه</span>
+                ><span>سال تجربه</span>
               </div>
               <div class="he_ex_item">
                 <span class="hs_num_change" id="hsPr">۰</span
-                ><span>پروژه<br />تکمیل شده</span>
+                ><span>پروژه تکمیل شده</span>
               </div>
               <div class="he_ex_item">
                 <span class="hs_num_change" id="hsFl">۰</span
-                ><span>دنبال<br />کنندگان</span>
+                ><span>دنبال کنندگان</span>
               </div>
               <div class="he_ex_item">
                 <span class="hs_num_change" id="hsCu">۰</span
-                ><span>رضایت<br />مشتری</span>
+                ><span>رضایت مشتری</span>
               </div>
             </div>
           </div>
