Blog section created and fix some bugs in mobile version

--- a/index.html
+++ b/index.html
@@ -134,10 +134,7 @@
               </div>
               <div class="hs_heading_mobile">
                 <h2>من محمدرضاهستم</h2>
-                <h1>
-                  توسعه دهنده وب +
-                  طراح UI/UX
-                </h1>
+                <h1>توسعه دهنده وب + طراح UI/UX</h1>
               </div>
             </div>
             <div class="hs_experience">
@@ -429,6 +426,76 @@
               </div>
 
               <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="my_blog">
+        <div class="blog_holder">
+          <div class="blog_top">
+            <h2>وبلاگ‌های اخیر</h2>
+            <p>
+              ما ایده‌ها و در نتیجه خواسته‌های شما را در قالب یک پروژه وب منحصر
+              به فرد قرار می‌دهیم که الهام بخش شما و مشتریان شما است.
+            </p>
+          </div>
+          <div class="blog_down">
+            <div class="blog_item" href="#">
+              <span class="blog_tag">تکنولوژی</span>
+              <div class="blog_text">
+                <a href="#" class="blog_link"></a>
+                <div>
+                  <span class="blog_date">
+                    <i class="fi fi-rr-calendar"></i>
+                    ۲۱ اردیبهشت ۱۴۰۳
+                  </span>
+                  <span class="blog_comment">
+                    <i class="fi fi-rr-comment"></i>
+                    بدون دیدگاه
+                  </span>
+                </div>
+                <a href="#">نقش فناوری در مدیریت لجستیک مدرن</a>
+              </div>
+              <img src="./media/Blog/1.jpg" alt="" />
+            </div>
+
+            <div class="blog_item" href="#">
+              <span class="blog_tag">رزومه</span>
+              <div class="blog_text">
+                <a href="#" class="blog_link"></a>
+                <div>
+                  <span class="blog_date">
+                    <i class="fi fi-rr-calendar"></i>
+                    ۲۱ اردیبهشت ۱۴۰۳
+                  </span>
+                  <span class="blog_comment">
+                    <i class="fi fi-rr-comment"></i>
+                    بدون دیدگاه
+                  </span>
+                </div>
+                <a href="#">خدمات برای طراحی ارائه می‌شود</a>
+              </div>
+              <img src="./media/Blog/2.jpg" alt="" />
+            </div>
+
+            <div class="blog_item" href="#">
+              <span class="blog_tag">پرطرفدار</span>
+              <div class="blog_text">
+                <a href="#" class="blog_link"></a>
+                <div>
+                  <span class="blog_date">
+                    <i class="fi fi-rr-calendar"></i>
+                    ۲۱ اردیبهشت ۱۴۰۳
+                  </span>
+                  <span class="blog_comment">
+                    <i class="fi fi-rr-comment"></i>
+                    بدون دیدگاه
+                  </span>
+                </div>
+                <a href="#">دیجیتال‌مارکتینگ در مسیر جدید</a>
+              </div>
+              <img src="./media/Blog/3.jpg" alt="" />
             </div>
           </div>
         </div>
