confirm form section

--- a/index.html
+++ b/index.html
@@ -500,6 +500,85 @@
           </div>
         </div>
       </section>
+
+      <section class="contact_form">
+        <div class="contact_holder">
+          <div class="contact_form">
+            <div class="contact_form_header">
+              <h2>همکاری و ارتباط با من</h2>
+              <p>
+                من چیزهای ساده و زیبا را طراحی و کدنویسی میکنم و کاری را که
+                انجام میدهم دوست دارم.
+              </p>
+            </div>
+
+            <form action="">
+              <div>
+                <input
+                  type="text"
+                  name="firstName"
+                  id="firstName"
+                  placeholder="نام"
+                />
+                <input
+                  type="text"
+                  name="lastName"
+                  id="lastName"
+                  placeholder="نام خانوادگی"
+                />
+              </div>
+              <div>
+                <input
+                  type="email"
+                  name="email"
+                  id="eamil"
+                  placeholder="ایمیل"
+                />
+                <input
+                  type="text"
+                  name="phoneNumber"
+                  id="phoneNumber"
+                  placeholder="شماره تماس"
+                />
+              </div>
+              <select name="services" id="services" placeholder="خدمات">
+                <option value="طراحی سایت">طراحی سایت</option>
+                <option value="طراحی UI">طراحی UI</option>
+                <option value="سئو">سئو</option>
+              </select>
+              <textarea
+                name="yourText"
+                id="yourText"
+                placeholder="پیام خود را بنویسید ..."
+              ></textarea>
+              <input class="submit" type="submit" value="ارسال" />
+            </form>
+          </div>
+          <div class="social_media">
+            <div>
+              <i class="fi fi-rr-phone-call"></i>
+              <div>
+                <span>تلفن</span>
+                <p>۰۹۹۴۰۳۸۲۳۰۹</p>
+              </div>
+            </div>
+            <div>
+              <i class="fi fi-rr-envelope"></i>
+              <div>
+                <span>ایمیل</span>
+                <p>mohammadrezalottfii@gmail.com</p>
+              </div>
+            </div>
+            <div>
+              <i class="fi fi-rs-marker"></i>
+              <div>
+                <span>آدرس</span>
+                <p>تهران ، اسلامشهر</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
   <script src="./js/script.js"></script>
