--- a/index.html
+++ b/index.html
@@ -8,21 +8,31 @@
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./flaticon-uicons/css/all/all.css" />
     <link rel="stylesheet" href="./swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./node_modules/aos/dist/aos.css" />
+    <link rel="stylesheet" href="./node_modules/lenis/dist/lenis.css" />
   </head>
   <body>
     <header class="header">
       <nav class="nav_header">
         <div class="header_right">
-          <a class="logo" href="./index.html">
+          <a
+            class="logo"
+            href="./index.html"
+            data-aos="fade-left"
+            data-aos-delay="50"
+          >
             <img class="logo" src="./media/Logo.svg" alt="mohammadrezaLotfi" />
           </a>
-          <a class="mail" href="mailto:mohammadrezalottfii@gmail.com"
+          <a
+            class="mail"
+            href="mailto:mohammadrezalottfii@gmail.com"
+            data-aos="fade-left"
             >mohammadrezalottfii@gmail.com</a
           >
         </div>
 
         <div class="header_center">
-          <ul class="items">
+          <ul class="items" data-aos="fade-right">
             <li class="nav_item">
               <a href="#">خانه</a>
               <div class="nav_selector"></div>
@@ -47,8 +57,15 @@
         </div>
 
         <div class="header_left">
-          <a href="#">همکاری با من!</a>
-          <div class="mobile_menu" id="mobileMenu">
+          <a href="#" data-aos="fade-right" data-aos-delay="50"
+            >همکاری با من!</a
+          >
+          <div
+            class="mobile_menu"
+            id="mobileMenu"
+            data-aos="fade-right"
+            data-aos-delay="100"
+          >
             <span class="open_mobile_menu"></span>
             <span class="open_mobile_menu"></span>
             <span class="open_mobile_menu"></span>
@@ -87,23 +104,23 @@
                 </svg>
               </div>
               <div class="hs_heading">
-                <h2>من محمدرضاهستم</h2>
-                <h1>
+                <h2 data-aos="fade-left">من محمدرضاهستم</h2>
+                <h1 data-aos="fade-left" data-aos-delay="100">
                   توسعه دهنده وب +<br />
                   طراح UI/UX
                 </h1>
-                <p>
+                <p data-aos="fade-left" data-aos-delay="200">
                   من مشکلات پیچیده تجربه کاربر را برای ایجاد راه حل های متمرکز
                   بر یکپارچگی که میلیاردها نفر را به هم متصل میکند، تجزیه میکنم
                 </p>
                 <div class="my_info">
                   <div class="resumeh">
-                    <a href="#"
+                    <a href="#" data-aos="fade-up" data-aos-delay="300"
                       >دانلود رزومه
                       <i class="fi fi-rr-download"></i>
                     </a>
                   </div>
-                  <div class="social">
+                  <div class="social" data-aos="fade-up" data-aos-delay="350">
                     <ul>
                       <li>
                         <a href="#">
@@ -129,28 +146,28 @@
                   </div>
                 </div>
               </div>
-              <div class="hs_img">
+              <div class="hs_img" data-aos="fade-right">
                 <img src="./media/my personal.webp" alt="" />
               </div>
               <div class="hs_heading_mobile">
-                <h2>من محمدرضاهستم</h2>
-                <h1>توسعه دهنده وب + طراح UI/UX</h1>
+                <h2 data-aos="fade-left">من محمدرضاهستم</h2>
+                <h1 data-aos="fade-left" data-aos-delay="100">توسعه دهنده وب + طراح UI/UX</h1>
               </div>
             </div>
             <div class="hs_experience">
-              <div class="he_ex_item">
+              <div class="he_ex_item" data-aos="fade-up">
                 <span class="hs_num_change" id="hsEx">۰</span
                 ><span>سال تجربه</span>
               </div>
-              <div class="he_ex_item">
+              <div class="he_ex_item" data-aos="fade-up" data-aos-delay="100">
                 <span class="hs_num_change" id="hsPr">۰</span
                 ><span>پروژه تکمیل شده</span>
               </div>
-              <div class="he_ex_item">
+              <div class="he_ex_item" data-aos="fade-up" data-aos-delay="200">
                 <span class="hs_num_change" id="hsFl">۰</span
                 ><span>دنبال کنندگان</span>
               </div>
-              <div class="he_ex_item">
+              <div class="he_ex_item" data-aos="fade-up" data-aos-delay="300">
                 <span class="hs_num_change" id="hsCu">۰</span
                 ><span>رضایت مشتری</span>
               </div>
@@ -162,15 +179,15 @@
       <section class="service">
         <div class="conainer">
           <div class="serv_text">
-            <h2>خدمات با کیفیت من</h2>
-            <p>
+            <h2 data-aos="fade-up">خدمات با کیفیت من</h2>
+            <p data-aos="fade-up" data-aos-delay="100">
               ما ایده‌ها و در نتیجه خواسته‌های شما را در قالب یک پروژه وب منحصر
               به فرد قرار می‌دهیم که الهام بخش شما و<br />
               مشتریان شما است
             </p>
           </div>
-          <div class="serv_items">
-            <a href="#" class="serv_a_link">
+          <div class="serv_items" data-aos="fade-up" data-aos-delay="200">
+            <a href="#" class="serv_a_link" class="serv_items">
               <div class="serv_item serv_hover">
                 <div class="serv_name">
                   <span>۰۱</span>
@@ -226,8 +243,8 @@
       <section class="my_job">
         <div class="container">
           <div class="my_job_menu">
-            <h2>کارهای اخیر من</h2>
-            <div class="my_job_holder">
+            <h2 data-aos="fade-up">کارهای اخیر من</h2>
+            <div class="my_job_holder" data-aos="fade-up" data-aos-delay="100">
               <ul class="my_job_items">
                 <li class="my_job_item my_job_menu_active">همه</li>
                 <li class="my_job_item">اپلیکیشن</li>
@@ -244,22 +261,22 @@
       <section class="my_experience">
         <div class="myex_holder">
           <div class="myex_job">
-            <div class="myex_top">
+            <div class="myex_top" data-aos="fade-left">
               <i class=""></i>
               <h2>تجربیات من</h2>
             </div>
             <div class="myex_down">
-              <div class="myex_item">
+              <div class="myex_item" data-aos="fade-left" data-aos-delay="150">
                 <span>۲۰۲۲ - تاکنون</span>
                 <h3>توسعه دهنده وب</h3>
                 <span>دیجیکالا</span>
               </div>
-              <div class="myex_item">
+              <div class="myex_item" data-aos="fade-left" data-aos-delay="300">
                 <span>۲۰۲۱ - ۲۰۲۲</span>
                 <h3>توسعه دهنده وردپرس</h3>
                 <span>شاپیفای</span>
               </div>
-              <div class="myex_item">
+              <div class="myex_item" data-aos="fade-left" data-aos-delay="450">
                 <span>۲۰۲۰ - ۲۰۲۱</span>
                 <h3>طراح UI/UX</h3>
                 <span>ایرانسل</span>
@@ -267,22 +284,22 @@
             </div>
           </div>
           <div class="myex_edu">
-            <div class="myedu_top">
-              <i class="flaticon flaticon-mortarboard"></i>
+            <div class="myedu_top" data-aos="fade-right">
+              <i class=""></i>
               <h2>تحصیلات من</h2>
             </div>
             <div class="myedu_down">
-              <div class="myex_item">
+              <div class="myex_item" data-aos="fade-right" data-aos-delay="150">
                 <span>۲۰۲۲ - تاکنون</span>
                 <h3>توسعه دهنده وب</h3>
                 <span>دیجیکالا</span>
               </div>
-              <div class="myex_item">
+              <div class="myex_item" data-aos="fade-right" data-aos-delay="300">
                 <span>۲۰۲۱ - ۲۰۲۲</span>
                 <h3>توسعه دهنده وردپرس</h3>
                 <span>شاپیفای</span>
               </div>
-              <div class="myex_item">
+              <div class="myex_item" data-aos="fade-right" data-aos-delay="450">
                 <span>۲۰۲۰ - ۲۰۲۱</span>
                 <h3>طراح UI/UX</h3>
                 <span>ایرانسل</span>
@@ -295,42 +312,42 @@
       <section class="my_skill">
         <div class="my_skill_holder">
           <div class="my_skill_top">
-            <h2>مهارت‌های من</h2>
-            <p>
+            <h2 data-aos="fade-up">مهارت‌های من</h2>
+            <p data-aos="fade-up" data-aos-delay="100">
               ما ایده‌ها و در نتیجه خواسته‌های شما را در قالب یک پروژه وب منحصر
               به فرد قرار می‌دهیم که الهام بخش شما و مشتریان شما است.
             </p>
           </div>
           <div class="my_skill_items">
-            <div class="my_skill_item">
+            <div class="my_skill_item" data-aos="fade-up" data-aos-delay="200">
               <div>
                 <img src="./media/image/figma.png" alt="figma" />
                 <span>۹۰٪</span>
               </div>
               <p>فیگما</p>
             </div>
-            <div class="my_skill_item">
+            <div class="my_skill_item" data-aos="fade-up" data-aos-delay="300">
               <div>
                 <img src="./media/image/js.png" alt="figma" />
                 <span>۸۰٪</span>
               </div>
               <p>جاوا اسکریپت</p>
             </div>
-            <div class="my_skill_item">
+            <div class="my_skill_item" data-aos="fade-up" data-aos-delay="400">
               <div>
                 <img src="./media/image/react.png" alt="figma" />
                 <span>۶۰٪</span>
               </div>
               <p>ری‌اکت</p>
             </div>
-            <div class="my_skill_item">
+            <div class="my_skill_item" data-aos="fade-up" data-aos-delay="500">
               <div>
                 <img src="./media/image/wp.png" alt="figma" />
                 <span>۹۵٪</span>
               </div>
               <p>وردپرس</p>
             </div>
-            <div class="my_skill_item">
+            <div class="my_skill_item" data-aos="fade-up" data-aos-delay="600">
               <div>
                 <img src="./media/image/php.png" alt="figma" />
                 <span>۹۰٪</span>
@@ -344,12 +361,16 @@
       <section class="my_comment">
         <div class="my_comment_holder">
           <div class="my_comment_header">
-            <h2>نظرات همکاران من</h2>
-            <p>
+            <h2 data-aos="fade-up">نظرات همکاران من</h2>
+            <p data-aos="fade-up" data-aos-delay="100">
               توانمندسازی مردم در یک سفر دیجیتالی جدید با خدمات فوق العاده من
             </p>
           </div>
-          <div class="my_comment_slider">
+          <div
+            class="my_comment_slider"
+            data-aos="fade-right"
+            data-aos-delay="100"
+          >
             <div class="swiper mySwiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -434,14 +455,19 @@
       <section class="my_blog">
         <div class="blog_holder">
           <div class="blog_top">
-            <h2>وبلاگ‌های اخیر</h2>
-            <p>
+            <h2 data-aos="fade-up">وبلاگ‌های اخیر</h2>
+            <p data-aos="fade-up" data-aos-delay="100">
               ما ایده‌ها و در نتیجه خواسته‌های شما را در قالب یک پروژه وب منحصر
               به فرد قرار می‌دهیم که الهام بخش شما و مشتریان شما است.
             </p>
           </div>
           <div class="blog_down">
-            <div class="blog_item" href="#">
+            <div
+              class="blog_item"
+              href="#"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
               <span class="blog_tag">تکنولوژی</span>
               <div class="blog_text">
                 <a href="#" class="blog_link"></a>
@@ -460,7 +486,12 @@
               <img src="./media/Blog/1.jpg" alt="" />
             </div>
 
-            <div class="blog_item" href="#">
+            <div
+              class="blog_item"
+              href="#"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
               <span class="blog_tag">رزومه</span>
               <div class="blog_text">
                 <a href="#" class="blog_link"></a>
@@ -479,7 +510,12 @@
               <img src="./media/Blog/2.jpg" alt="" />
             </div>
 
-            <div class="blog_item" href="#">
+            <div
+              class="blog_item"
+              href="#"
+              data-aos="fade-up"
+              data-aos-delay="400"
+            >
               <span class="blog_tag">پرطرفدار</span>
               <div class="blog_text">
                 <a href="#" class="blog_link"></a>
@@ -503,10 +539,12 @@
 
       <section class="contact_form">
         <div class="contact_holder">
-          <div class="contact_form">
+          <div class="contact_form" data-aos="fade-up">
             <div class="contact_form_header">
-              <h2>همکاری و ارتباط با من</h2>
-              <p>
+              <h2 data-aos="fade-up" data-aos-delay="100">
+                همکاری و ارتباط با من
+              </h2>
+              <p data-aos="fade-up" data-aos-delay="200">
                 من چیزهای ساده و زیبا را طراحی و کدنویسی میکنم و کاری را که
                 انجام میدهم دوست دارم.
               </p>
@@ -519,12 +557,16 @@
                   name="firstName"
                   id="firstName"
                   placeholder="نام"
+                  data-aos="fade-up"
+                  data-aos-delay="300"
                 />
                 <input
                   type="text"
                   name="lastName"
                   id="lastName"
                   placeholder="نام خانوادگی"
+                  data-aos="fade-up"
+                  data-aos-delay="400"
                 />
               </div>
               <div>
@@ -533,15 +575,25 @@
                   name="email"
                   id="eamil"
                   placeholder="ایمیل"
+                  data-aos="fade-up"
+                  data-aos-delay="500"
                 />
                 <input
                   type="text"
                   name="phoneNumber"
                   id="phoneNumber"
                   placeholder="شماره تماس"
+                  data-aos="fade-up"
+                  data-aos-delay="600"
                 />
               </div>
-              <select name="services" id="services" placeholder="خدمات">
+              <select
+                name="services"
+                id="services"
+                placeholder="خدمات"
+                data-aos="fade-up"
+                data-aos-delay="700"
+              >
                 <option value="طراحی سایت">طراحی سایت</option>
                 <option value="طراحی UI">طراحی UI</option>
                 <option value="سئو">سئو</option>
@@ -550,26 +602,28 @@
                 name="yourText"
                 id="yourText"
                 placeholder="پیام خود را بنویسید ..."
+                data-aos="fade-up"
+                data-aos-delay="800"
               ></textarea>
-              <input class="submit" type="submit" value="ارسال" />
+              <input class="submit" type="submit" value="ارسال پیام" />
             </form>
           </div>
           <div class="social_media">
-            <div>
+            <div data-aos="fade-up">
               <i class="fi fi-rr-phone-call"></i>
               <div>
                 <span>تلفن</span>
                 <p>۰۹۹۴۰۳۸۲۳۰۹</p>
               </div>
             </div>
-            <div>
+            <div data-aos="fade-up" data-aos-delay="100">
               <i class="fi fi-rr-envelope"></i>
               <div>
                 <span>ایمیل</span>
                 <p>mohammadrezalottfii@gmail.com</p>
               </div>
             </div>
-            <div>
+            <div data-aos="fade-up" data-aos-delay="200">
               <i class="fi fi-rs-marker"></i>
               <div>
                 <span>آدرس</span>
@@ -585,4 +639,24 @@
   <script src="./js/mobileMenu.js"></script>
   <script src="./swiper/swiper-bundle.min.js"></script>
   <script src="./js/slider.js"></script>
+  <script src="./node_modules/aos/dist/aos.js"></script>
+  <script src="./node_modules/lenis/dist/lenis.min.js"></script>
+  <script>
+    AOS.init({
+      duration: 600,
+      easing: "ease-in-out-quart",
+      offset: 40,
+    });
+    AOS.refresh();
+  </script>
+  <script>
+    const lenis = new Lenis();
+
+    function raf(time) {
+      lenis.raf(time);
+      requestAnimationFrame(raf);
+    }
+
+    requestAnimationFrame(raf);
+  </script>
 </html>
