change smooth scroll and animation file location

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./flaticon-uicons/css/all/all.css" />
     <link rel="stylesheet" href="./swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./node_modules/aos/dist/aos.css" />
-    <link rel="stylesheet" href="./node_modules/lenis/dist/lenis.css" />
+    <link rel="stylesheet" href="./aos/dist/aos.css" />
+    <link rel="stylesheet" href="./lenis/dist/lenis.css" />
   </head>
   <body>
     <header class="header">
@@ -151,7 +151,9 @@
               </div>
               <div class="hs_heading_mobile">
                 <h2 data-aos="fade-left">من محمدرضاهستم</h2>
-                <h1 data-aos="fade-left" data-aos-delay="100">توسعه دهنده وب + طراح UI/UX</h1>
+                <h1 data-aos="fade-left" data-aos-delay="100">
+                  توسعه دهنده وب + طراح UI/UX
+                </h1>
               </div>
             </div>
             <div class="hs_experience">
@@ -639,13 +641,13 @@
   <script src="./js/mobileMenu.js"></script>
   <script src="./swiper/swiper-bundle.min.js"></script>
   <script src="./js/slider.js"></script>
-  <script src="./node_modules/aos/dist/aos.js"></script>
-  <script src="./node_modules/lenis/dist/lenis.min.js"></script>
+  <script src="./aos/dist/aos.js"></script>
+  <script src="./lenis/dist/lenis.min.js"></script>
   <script>
     AOS.init({
       duration: 600,
       easing: "ease-in-out-quart",
-      offset: 40,
+      offset: 80,
     });
     AOS.refresh();
   </script>
